ExportXMLWordPrintableJSON

    • Type: Bug
    • Resolution: Done
    • Priority: Major - P3
    • 2.1.1
    • Affects Version/s: 2.1.0
    • Component/s: Sharding
    • None
    • Environment:
      git commit: 0467512a8eaec22b54f2281624c229cacd5e36f5
    • ALL
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      addr2line output:

      formattedBacktrace
      /home/ren/mongo-copy/src/mongo/util/signal_handlers.cpp:93
      mongo::printStackAndExit(int)
      /home/ren/mongo-copy/src/mongo/util/signal_handlers.cpp:116
      ??
      ??:0
      mongo::ChunkManager::getSequenceNumber() const
      /home/ren/mongo-copy/src/mongo/s/chunk.h:340
      mongo::checkShardVersion(mongo::DBClientBase*, std::string const&, boost::shared_ptr<mongo::ChunkManager const>, bool, int)
      /home/ren/mongo-copy/src/mongo/s/shard_version.cpp:189
      mongo::VersionManager::checkShardVersionCB(mongo::ShardConnection*, bool, int)
      /home/ren/mongo-copy/src/mongo/s/shard_version.cpp:270
      mongo::ShardConnection::_finishInit()
      /home/ren/mongo-copy/src/mongo/s/shardconnection.cpp:192
      mongo::ShardConnection::setVersion()
      /home/ren/mongo-copy/src/mongo/s/shard.h:258
      mongo::ShardStrategy::_insert(mongo::Request&, mongo::DbMessage&, boost::shared_ptr<mongo::ChunkManager const>, std::vector<mongo::BSONObj, std::allocator<mongo::BSONObj> >&, std::map<boost::shared_ptr<mongo::Chunk const>, std::vector<mongo::BSONObj, std::allocator<mongo::BSONObj> >, std::less<boost::shared_ptr<mongo::Chunk const> >, std::allocator<std::pair<boost::shared_ptr<mongo::Chunk const> const, std::vector<mongo::BSONObj, std::allocator<mongo::BSONObj> > > > >, int)
      /home/ren/mongo-copy/src/mongo/s/strategy_shard.cpp:245
      mongo::ShardStrategy::_insert(mongo::Request&, mongo::DbMessage&, boost::shared_ptr<mongo::ChunkManager const>)
      /home/ren/mongo-copy/src/mongo/s/strategy_shard.cpp:321
      mongo::ShardStrategy::writeOp(int, mongo::Request&)
      /home/ren/mongo-copy/src/mongo/s/strategy_shard.cpp:512
      mongo::Request::process(int)
      /home/ren/mongo-copy/src/mongo/s/request.cpp:140
      mongo::WriteBackListener::run()
      /home/ren/mongo-copy/src/mongo/s/writeback_listener.cpp:227
      mongo::BackgroundJob::jobBody(boost::shared_ptr<mongo::BackgroundJob::JobStatus>)
      /home/ren/mongo-copy/src/mongo/util/background.cpp:71
      boost::_mfi::mf1<void, mongo::BackgroundJob, boost::shared_ptr<mongo::BackgroundJob::JobStatus> >::operator()(mongo::BackgroundJob*, boost::shared_ptr<mongo::BackgroundJob::JobStatus>) const
      /home/ren/mongo-copy/src/third_party/boost/boost/bind/mem_fn_template.hpp:165
      void boost::_bi::list2<boost::_bi::value<mongo::BackgroundJob*>, boost::_bi::value<boost::shared_ptr<mongo::BackgroundJob::JobStatus> > >::operator()<boost::_mfi::mf1<void, mongo::BackgroundJob, boost::shared_ptr<mongo::BackgroundJob::JobStatus> >, boost::_bi::list0>(boost::_bi::type<void>, boost::_mfi::mf1<void, mongo::BackgroundJob, boost::shared_ptr<mongo::BackgroundJob::JobStatus> >&, boost::_bi::list0&, int)
      /home/ren/mongo-copy/src/third_party/boost/boost/bind/bind.hpp:313
      boost::_bi::bind_t<void, boost::_mfi::mf1<void, mongo::BackgroundJob, boost::shared_ptr<mongo::BackgroundJob::JobStatus> >, boost::_bi::list2<boost::_bi::value<mongo::BackgroundJob*>, boost::_bi::value<boost::shared_ptr<mongo::BackgroundJob::JobStatus> > > >::operator()()
      /home/ren/mongo-copy/src/third_party/boost/boost/bind/bind_template.hpp:21
      boost::detail::thread_data<boost::_bi::bind_t<void, boost::_mfi::mf1<void, mongo::BackgroundJob, boost::shared_ptr<mongo::BackgroundJob::JobStatus> >, boost::_bi::list2<boost::_bi::value<mongo::BackgroundJob*>, boost::_bi::value<boost::shared_ptr<mongo::BackgroundJob::JobStatus> > > > >::run()
      /home/ren/mongo-copy/src/third_party/boost/boost/thread/detail/thread.hpp:63
      thread_proxy
      /home/ren/mongo-copy/src/third_party/boost/libs/thread/src/pthread/thread.cpp:133
      ??
      ??:0

            Assignee:
            Randolph Tan
            Reporter:
            Randolph Tan
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

              Created:
              Updated:
              Resolved: