SERVER-5480 Mongos signal 11 crash when trying to process a writeback of a dropped collection

Reversed condition statement from:

(manager.get() == 0)? : manager->getSequenceNumber() : "<none>"

to

(manager.get() == 0)? : "<none>" : manager->getSequenceNumber()